java_library(
    name = "protobuf",
    srcs = glob([
        "src/main/java/**/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//core",
        "//protobuf-lite:protobuf_lite",
        "@com_google_api_grpc_google_common_protos//jar",
        "@com_google_code_findbugs_jsr305//jar",
        "@com_google_guava//jar",
        "@com_google_protobuf_java//:protobuf_java",
        "@com_google_protobuf_java//:protobuf_java_util",
    ],
)
