java_library(
    name = "stub",
    srcs = glob([
        "src/main/java/**/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//context",
        "//core",
        "@com_google_code_findbugs_jsr305//jar",
        "@com_google_guava_guava//jar",
    ],
)

# javax.annotation.Generated is not included in the default root modules in 9,
# see: http://openjdk.java.net/jeps/320.
java_library(
    name = "javax_annotation",
    neverlink = 1,  # @Generated is source-retention
    visibility = ["//visibility:public"],
    exports = ["@javax_annotation_javax_annotation_api//jar"],
)
