java_library(
    name = "testing",
    srcs = glob([
        "src/main/java/io/grpc/testing/*.java",
    ]),
    resources = glob([
        "src/main/resources/**",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//context",
        "//core",
        "//core:inprocess",
        "//core:util",
        "//stub",

        "@com_google_code_findbugs_jsr305//jar",
        "@com_google_guava_guava//jar",
        "@com_google_truth_truth//jar",
        "@junit_junit//jar",
    ],
    testonly = 1,
)

java_library(
    name = "internal",
    srcs = glob([
        "src/main/java/io/grpc/internal/*.java",
    ]),
    visibility = ["//:__subpackages__"],
    deps = [
        "//core",
        "//core:internal",
    ],
)
