load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

java_library(
    name = "example-gauth",
    testonly = 1,
    srcs = glob(
        ["src/main/java/**/*.java"],
    ),
    deps = [
        "@io_grpc_grpc_java//core",
        "@io_grpc_grpc_java//protobuf",
        "@io_grpc_grpc_java//stub",
        "@io_grpc_grpc_java//auth",
        "@com_google_auth_google_auth_library_oauth2_http//jar",
        "@com_google_api_grpc_cloud_pubsub_v1//jar",
        "@com_google_api_grpc_proto_cloud_pubsub_v1//jar",
    ],
)

java_binary(
    name = "google-auth-client",
    testonly = 1,
    main_class = "io.grpc.examples.googleAuth.GoogleAuthClient",
    runtime_deps = [
        ":example-gauth",
    ],
)
