load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

proto_library(
    name = "helloworld_proto",
    srcs = ["src/main/proto/helloworld/helloworld.proto"],
)

java_proto_library(
    name = "helloworld_java_proto",
    deps = [":helloworld_proto"],
)

java_grpc_library(
    name = "helloworld_java_grpc",
    srcs = [":helloworld_proto"],
    deps = [":helloworld_java_proto"],
)

java_library(
    name = "example-tls",
    testonly = 1,
    srcs = glob(
        ["src/main/java/**/*.java"],
    ),
    deps = [
        ":helloworld_java_grpc",
        ":helloworld_java_proto",
        "@io_grpc_grpc_java//core",
        "@io_grpc_grpc_java//netty",
        "@io_grpc_grpc_java//protobuf",
        "@io_grpc_grpc_java//stub",
        "@io_netty_netty_handler//jar",
    ],
    runtime_deps = [
        "@io_netty_netty_tcnative_boringssl_static//jar",
    ]
)

java_binary(
    name = "hello-world-tls-client",
    testonly = 1,
    main_class = "io.grpc.examples.helloworldtls.HelloWorldClientTls",
    runtime_deps = [
        ":example-tls",
    ],
)

java_binary(
    name = "hello-world-tls-server",
    testonly = 1,
    main_class = "io.grpc.examples.helloworldtls.HelloWorldServerTls",
    runtime_deps = [
        ":example-tls",
    ],
)
